cot/tests/ui/unimplemented_admin_model.stderr
error[E0277]: `Model` does not implement the `AdminModel` trait
 --> tests/ui/unimplemented_admin_model.rs:6:41
  |
6 |     let _: Box<dyn AdminModelManager> = Box::new(DefaultAdminModelManager::<Model>::new());
  |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Model` is not an admin model
  |
help: the trait `AdminModel` is not implemented for `Model`
 --> tests/ui/unimplemented_admin_model.rs:3:1
  |
3 | struct Model {}
  | ^^^^^^^^^^^^
  = note: add #[derive(cot::admin::AdminModel)] to the struct to automatically derive the trait
help: the trait `AdminModel` is implemented for `DatabaseUser`
 --> src/auth/db.rs
  |
  | #[derive(Debug, Clone, Form, AdminModel)]
  |                              ^^^^^^^^^^
  = note: required for `DefaultAdminModelManager<Model>` to implement `AdminModelManager`
  = note: required for the cast from `Box<DefaultAdminModelManager<Model>>` to `Box<dyn AdminModelManager>`
  = note: this error originates in the derive macro `AdminModel` (in Nightly builds, run with -Z macro-backtrace for more info)
