cot/tests/ui/unimplemented_admin_model.rs
use cot::admin::{AdminModelManager, DefaultAdminModelManager};

struct Model {}

fn main() {
    let _: Box<dyn AdminModelManager> = Box::new(DefaultAdminModelManager::<Model>::new());
}
